--- a/Informacion/implementacion-tecnica.html
+++ b/Informacion/implementacion-tecnica.html
@@ -82,15 +82,15 @@
         </p>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
-          2. Trazabilidad por Blockchain
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          C.U.R.A. integra una capa de <strong>Blockchain Gubernamental</strong> para el registro de auditoría. Cada acceso o modificación genera un hash inmutable que garantiza transparencia total. Esto impide alteraciones retroactivas, permitiendo auditorías forenses con validez legal absoluta por un periodo de 10 años.
-        </p>
-      </div>
+<div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+  <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+    <i class="ph-bold ph-fingerprint text-cura-accent text-2xl"></i>
+    2. Inmutabilidad y Audit Trail
+  </h3>
+  <p class="text-sm text-cura-accentLight leading-relaxed">
+    C.U.R.A. implementa un sistema de <strong>Audit Trail (Pista de Auditoría)</strong> inmutable bajo la norma FDA 21 CFR Parte 11. Cada acceso o modificación genera un hash criptográfico que garantiza la integridad absoluta del dato. Esto impide alteraciones retroactivas, permitiendo auditorías forenses con validez legal absoluta por un periodo de 10 años.
+  </p>
+</div>
 
       <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
         <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
