--- a/Informacion/seg-priv.html
+++ b/Informacion/seg-priv.html
@@ -82,15 +82,15 @@
         </p>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
-          2. Inmutabilidad por Blockchain
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          C.U.R.A. implementa una capa de <strong>Blockchain</strong> para el registro de auditoría. Cada consulta, acceso o modificación de un dato médico genera un "hash" inalterable con sello de tiempo. Esto asegura que nadie pueda borrar o modificar los registros de quién accedió a la información, garantizando una <strong>Trazabilidad Forense</strong> inalterable por 10 años.
-        </p>
-      </div>
+<div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
+  <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+    <i class="ph-bold ph-shield-checkered text-cura-accent text-2xl"></i>
+    2. Inmutabilidad y Audit Trail
+  </h3>
+  <p class="text-sm text-cura-accentLight leading-relaxed">
+    C.U.R.A. implementa un sistema de <strong>Audit Trail (Pista de Auditoría)</strong> inmutable bajo la norma internacional FDA 21 CFR Parte 11. Cada consulta, acceso o modificación de un dato médico genera un hash criptográfico inalterable con sello de tiempo. Esto asegura la integridad total de los registros, garantizando una <strong>Trazabilidad Forense</strong> inalterable por 10 años sobre quién accedió a la información.
+  </p>
+</div>
 
       <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
         <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
