--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -95,10 +95,14 @@
                         <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-bank text-cura-accent"></i> Financiamiento</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">Detalles del modelo de financiamiento y sostenibilidad del sistema.</p>
                     </a>
-                    <a href="/Informacion/implementacion-tecnica.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
-                        <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-cpu text-cura-accent"></i> Implementación Técnica</h3>
-                        <p class="text-xs md:text-sm text-cura-accentLight">Detalles sobre arquitectura, APIs, blockchain y componentes tecnológicos.</p>
-                    </a>
+             <a href="/Informacion/implementacion-tecnica.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
+    <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2">
+        <i class="ph-bold ph-cpu text-cura-accent"></i> Implementación Técnica
+    </h3>
+    <p class="text-xs md:text-sm text-cura-accentLight">
+        Detalles sobre arquitectura, APIs, Audit Trail e inmutabilidad de registros bajo normas internacionales.
+    </p>
+</a>
                     <a href="/Informacion/beneficios.html" class="block bg-cura-card rounded-xl border border-cura-accent/40 p-5 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg hover:-translate-y-1">
                         <h3 class="text-base font-bold text-white mb-2 flex items-center gap-2"><i class="ph-bold ph-hand-heart text-cura-accent"></i> Beneficios Generales</h3>
                         <p class="text-xs md:text-sm text-cura-accentLight">Ventajas concretas: acceso rápido, menos papeleo y atención más humana.</p>
