--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             <i class="ph-bold ph-brain text-cura-accent text-xl"></i> Prioridad en Salud Mental
         </h3>
         <p class="text-xs md:text-sm text-cura-accentLight leading-relaxed">
-            Digitalizamos el seguimiento terapéutico con <strong>máxima reserva de identidad</strong>. Esta ley garantiza la continuidad entre profesionales y el acceso inmediato a redes de contención en momentos de crisis.
+          Priorizamos la atención presencial para grupos vulnerables y adultos mayores, derivando la demanda digital hacia la <strong>Teleconsulta Federal</strong>. El sistema funciona como un equilibrador de carga nacional que elimina listas de espera locales, protegiendo el vínculo terapéutico con encriptación de grado médico e inmutabilidad de registros.
         </p>
     </div>
 
