--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     </span>
     
     <span class="absolute top-full flex items-center gap-2 py-1 whitespace-nowrap text-sm opacity-0 transition-opacity duration-300 group-hover:opacity-100">
-      Última actualización: 14/01/2026
+      Última actualización: 15/01/2026
     </span>
     
   </div>
@@ -697,7 +697,7 @@ document.addEventListener('DOMContentLoaded', function () {
     const bannerMessages = [
       'La ley se encuentra en su etapa final de revisión técnica y estará disponible próximamente en la web.',
       'La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas. 90 páginas de transformación histórica de la Salud.',
-      "Ya se encuentra disponible para descargar el Resumen Ejecutivo [14/01/26] "
+      "Ya se encuentra disponible para descargar el Resumen Ejecutivo actualizado. [15/01/26] "
     ];
 
     let bannerIndex = 0;
