--- a/Informacion/recursos.html
+++ b/Informacion/recursos.html
@@ -80,20 +80,16 @@
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         
-        <a href="/documentos/Resumen_Ejecutivo.pdf" 
-   download="Resumen_Ejecutivo_Ley_CURA.pdf" 
-   type="application/pdf"
-   class="group flex items-center justify-between p-6 bg-cura-accent/10 border border-cura-accent/30 rounded-2xl hover:bg-cura-accent hover:border-cura-accent transition-all duration-300">
-  <div>
-    <p class="text-[10px] font-bold uppercase tracking-widest text-cura-accent group-hover:text-cura-primaryDark">PDF Disponible</p>
-    <h3 class="text-xl font-bold group-hover:text-cura-primaryDark">Resumen Ejecutivo</h3>
-    <p class="text-sm opacity-60 group-hover:text-cura-primaryDark/80">Estrategia, arquitectura y financiamiento</p>
-  </div>
-  <div class="bg-cura-accent text-cura-primaryDark p-3 rounded-full group-hover:bg-white transition-colors">
-    <i class="ph-bold ph-download-simple text-xl"></i>
-  </div>
-</a>
-
+        <a href="/documentos/Resumen_Ejecutivo.pdf" download class="group flex items-center justify-between p-6 bg-cura-accent/10 border border-cura-accent/30 rounded-2xl hover:bg-cura-accent hover:border-cura-accent transition-all duration-300">
+          <div>
+            <p class="text-[10px] font-bold uppercase tracking-widest text-cura-accent group-hover:text-cura-primaryDark">PDF Disponible</p>
+            <h3 class="text-xl font-bold group-hover:text-cura-primaryDark">Resumen Ejecutivo</h3>
+            <p class="text-sm opacity-60 group-hover:text-cura-primaryDark/80">Estrategia, arquitectura y financiamiento</p>
+          </div>
+          <div class="bg-cura-accent text-cura-primaryDark p-3 rounded-full group-hover:bg-white transition-colors">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg>
+          </div>
+        </a>
 
         <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
           <div>
