--- a/Informacion/recursos.html
+++ b/Informacion/recursos.html
@@ -94,6 +94,15 @@
         <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
           <div>
             <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
+            <h3 class="text-xl font-bold text-white/40">Marco Normativo</h3>
+            <p class="text-sm text-white/20">Texto completo de la Ley</p>
+          </div>
+          <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
+        </div>
+
+        <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
+          <div>
+            <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
             <h3 class="text-xl font-bold text-white/40">Biblioteca Técnica</h3>
             <p class="text-sm text-white/20">Guías HL7 FHIR y SNOMED CT</p>
           </div>
@@ -103,17 +112,8 @@
         <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
           <div>
             <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
-            <h3 class="text-xl font-bold text-white/40">Marco Normativo</h3>
-            <p class="text-sm text-white/20">Texto completo de la Ley y Dictámenes</p>
-          </div>
-          <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
-        </div>
-
-        <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
-          <div>
-            <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
-            <h3 class="text-xl font-bold text-white/40">Portal de Auditoría</h3>
-            <p class="text-sm text-white/20">Informes SIGEN y ahorros operativos</p>
+            <h3 class="text-xl font-bold text-white/40">Material audiovisual</h3>
+            <p class="text-sm text-white/20">Conferencias y videos explicativos.</p>
           </div>
           <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
         </div>
