--- a/index.html
+++ b/index.html
@@ -410,14 +410,14 @@
         <p class="text-xs text-cura-accentLight">Recibí recordatorios automáticos de vacunas y chequeos preventivos según tu edad.</p>
     </div>
 
-    <div class="sm:col-span-2 lg:col-span-3 bg-cura-card rounded-xl border border-cura-accent/60 p-5 shadow-lg transition hover:-translate-y-1 hover:border-cura-accent">
-        <h3 class="text-sm md:text-base font-bold text-white mb-2 flex items-center gap-2">
-            <i class="ph-bold ph-brain text-cura-accent text-xl"></i> Prioridad en Salud Mental
-        </h3>
-        <p class="text-xs md:text-sm text-cura-accentLight leading-relaxed">
-          Priorizamos la atención presencial para grupos vulnerables y adultos mayores, derivando la demanda digital hacia la <strong>Teleconsulta Federal</strong>. El sistema funciona como un equilibrador de carga nacional que elimina listas de espera locales, protegiendo el vínculo terapéutico con encriptación de grado médico e inmutabilidad de registros.
-        </p>
-    </div>
+<div class="sm:col-span-2 lg:col-span-3 bg-cura-card rounded-xl border border-cura-accent/60 p-5 shadow-lg transition hover:-translate-y-1 hover:border-cura-accent">
+    <h3 class="text-sm md:text-base font-bold text-white mb-2 flex items-center gap-2">
+        <i class="ph-bold ph-brain text-cura-accent text-xl"></i> Salud Mental sin esperas
+    </h3>
+    <p class="text-xs md:text-sm text-cura-accentLight leading-relaxed">
+        Chau a las listas de espera. Derivamos la demanda digital a una <strong>Red de Teleconsulta Federal</strong> para liberar turnos presenciales para quienes más lo necesitan, garantizando atención inmediata y total privacidad en tus sesiones.
+    </p>
+</div>
 
 </div>
  <div class="mt-12 flex justify-center w-full">
