--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </a>
     <nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap justify-center sm:justify-end mt-2 sm:mt-0">
       <a href="#inicio" class="nav-inicio-link text-cura-accentLight hover:text-white">Inicio</a>
-      <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
+      <a href="/Informacion/informacion.html" class="text-cura-accentLight hover:text-white">Información</a>
       <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
       <a href="/demo.html" class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">Demostración</a>
     </nav>
