--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html lang="es">
+<html lang="es" class="scroll-smooth snap-y snap-mandatory">
 <head>
   <meta charset="UTF-8" />
   
@@ -192,7 +192,8 @@
     border-style: solid;
     border-color: rgba(255, 255, 255, 0.5);
 }
-  
+  /* Cambia 80px por la altura aproximada de tu menú */
+  scroll-padding-top: 80px;
 </style>
 
 </head>
@@ -309,7 +310,7 @@
     </div>
   </section>
 
-<section id="informacion" class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-6 md:p-8">
+<section id="informacion" class="snap-start relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-6 md:p-8">
     
     <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
 
