--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -195,6 +195,19 @@
   <footer class="bg-cura-primaryDark py-8 border-t border-cura-accent/20 text-center text-xs text-cura-accentLight">
     <p>© 2026 Ley C.U.R.A. - Transformación Digital Sanitaria Argentina</p>
   </footer>
+<script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+<script>
+  const lenis = new Lenis({
+    duration: 1.2,
+    easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+    smoothWheel: true
+  });
 
+  function raf(time) {
+    lenis.raf(time);
+    requestAnimationFrame(raf);
+  }
+  requestAnimationFrame(raf);
+</script>
 </body>
 </html>
