--- a/Informacion/objetivos.html
+++ b/Informacion/objetivos.html
@@ -84,18 +84,18 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-16">
       
-    <div 
-  data-aos="fade-up" 
-  data-aos-delay="100" 
-  class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1"
->
-  <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-    <i class="ph-bold ph-globe text-cura-accent text-2xl"></i>
-    1. Soberanía Sanitaria Digital
-  </h3>
-  <p class="text-sm text-cura-accentLight leading-relaxed">
-    Garantizar que toda la infraestructura tecnológica y los datos sanitarios de los argentinos residan y sean procesados en territorio nacional. C.U.R.A. establece que la información médica es un activo estratégico de la Nación, blindado contra dependencias externas.
-  </p>
+<div data-aos="fade-up" data-aos-delay="100">
+  
+  <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20">
+    <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+      <i class="ph-bold ph-globe text-cura-accent text-2xl"></i>
+      1. Soberanía Sanitaria Digital
+    </h3>
+    <p class="text-sm text-cura-accentLight leading-relaxed">
+      Garantizar que toda la infraestructura tecnológica y los datos sanitarios de los argentinos residan y sean procesados en territorio nacional. C.U.R.A. establece que la información médica es un activo estratégico de la Nación, blindado contra dependencias externas.
+    </p>
+  </div>
+
 </div>
 
       <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
