--- a/Informacion/objetivos.html
+++ b/Informacion/objetivos.html
@@ -98,56 +98,65 @@
 
 </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-user-focus text-cura-accent text-2xl"></i>
-          2. Empoderamiento y Propiedad
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-            Restituir al ciudadano la propiedad efectiva de su historial médico. A través de la Credencial Única de Salud (C.U.S.), el paciente garantiza la portabilidad total de sus datos: su información lo acompaña, sin importar si se atiende en el sector público, privado o de seguridad social.
-        </p>
-      </div>
+     <div data-aos="fade-up" data-aos-delay="200">
+  <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/10">
+    <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+      <i class="ph-bold ph-user-focus text-cura-accent text-2xl"></i>
+      2. Empoderamiento y Propiedad
+    </h3>
+    <p class="text-sm text-cura-accentLight leading-relaxed">
+      Restituir al ciudadano la propiedad efectiva de su historial médico. A través de la Credencial Única de Salud (C.U.S.), el paciente garantiza la portabilidad total de sus datos: su información lo acompaña, sin importar si se atiende en el sector público, privado o de seguridad social.
+    </p>
+  </div>
+</div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-intersect text-cura-accent text-2xl"></i>
-          3. Interoperabilidad Universal
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-            Eliminar los "silos de información". El sistema impone el uso de estándares internacionales (HL7 FHIR y SNOMED CT) como norma de cumplimiento obligatorio para todos los subsectores, permitiendo que diferentes sistemas de salud hablen el mismo idioma por primera vez.
-        </p>
-      </div>
+<div data-aos="fade-up" data-aos-delay="300">
+  <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/10">
+    <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+      <i class="ph-bold ph-intersect text-cura-accent text-2xl"></i>
+      3. Interoperabilidad Universal
+    </h3>
+    <p class="text-sm text-cura-accentLight leading-relaxed">
+      Eliminar los "silos de información". El sistema impone el uso de estándares internacionales (HL7 FHIR y SNOMED CT) como norma de cumplimiento obligatorio para todos los subsectores, permitiendo que diferentes sistemas de salud hablen el mismo idioma por primera vez.
+    </p>
+  </div>
+</div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-chart-bar text-cura-accent text-2xl"></i>
-          4. Eficiencia Actuarial
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-            Optimizar el gasto prestacional mediante la eliminación de la redundancia. Al evitar la duplicación de estudios, combatir el fraude de identidad y digitalizar la burocracia, se proyecta un ahorro directo de hasta el 30% del gasto en salud.
-        </p>
-      </div>
+<div data-aos="fade-up" data-aos-delay="400">
+  <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/10">
+    <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+      <i class="ph-bold ph-chart-bar text-cura-accent text-2xl"></i>
+      4. Eficiencia Actuarial
+    </h3>
+    <p class="text-sm text-cura-accentLight leading-relaxed">
+      Optimizar el gasto prestacional mediante la eliminación de la redundancia. Al evitar la duplicación de estudios, combatir el fraude de identidad y digitalizar la burocracia, se proyecta un ahorro directo de hasta el 30% del gasto en salud.
+    </p>
+  </div>
+</div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-brain text-cura-accent text-2xl"></i>
-          5. Medicina Predictiva (IA)
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-            Transicionar de una medicina reactiva a una medicina basada en datos. Utilizar la Inteligencia Artificial de manera ética para el soporte diagnóstico, la vigilancia epidemiológica en tiempo real y la prevención personalizada.
-        </p>
-      </div>
+<div data-aos="fade-up" data-aos-delay="500">
+  <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/10">
+    <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+      <i class="ph-bold ph-brain text-cura-accent text-2xl"></i>
+      5. Medicina Predictiva (IA)
+    </h3>
+    <p class="text-sm text-cura-accentLight leading-relaxed">
+      Transicionar de una medicina reactiva a una medicina basada en datos. Utilizar la Inteligencia Artificial de manera ética para el soporte diagnóstico, la vigilancia epidemiológica en tiempo real y la prevención personalizada.
+    </p>
+  </div>
+</div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-rocket-launch text-cura-accent text-2xl"></i>
-          6. Liderazgo Global
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-            Posicionar a la República Argentina como un referente regional en Salud Digital. El país se transforma en un Hub Global de Interoperabilidad, capaz de exportar conocimiento, tecnología y modelos de gestión sanitaria moderna.
-        </p>
-      </div>
-    </div>
+<div data-aos="fade-up" data-aos-delay="600">
+  <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/10">
+    <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+      <i class="ph-bold ph-rocket-launch text-cura-accent text-2xl"></i>
+      6. Liderazgo Global
+    </h3>
+    <p class="text-sm text-cura-accentLight leading-relaxed">
+      Posicionar a la República Argentina como un referente regional en Salud Digital. El país se transforma en un Hub Global de Interoperabilidad, capaz de exportar conocimiento, tecnología y modelos de gestión sanitaria moderna.
+    </p>
+  </div>
+</div>
 
     <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
         <div class="bg-cura-primaryDark/50 border border-cura-accent/20 rounded-xl p-4 text-center">
